tests/samples/invalid/non_existing_statement.pn
fn main()
{
	var x = 33;

	if x == 33
	{
		stop;
	}

	var y = x + 2;
}
